# test2

./: .gitmodules  CMakeLists.txt  FreeRTOSConfig.h  FreeRTOSConfig_examples_common.h  Readme.md  adder.cpp  adder.h  main.cpp  test2.cpp
common/: bldc_lib.h  definitions.cpp  definitions.h  interfaces.h
lib/: bldc_lib.cpp  bldc_lib.h
tasks/: BldcDriverTask.cpp  BlinkDriverTask.cpp  ButtonTask.cpp  HallDriverTask.cpp  StartStopTask.cpp  SystemConfigTask.cpp
tests/: CMakeLists.txt  bldc_tests.cpp
